<resources>
    <string name="app_name">English District</string>
    <string name="title_activity_news">NewsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_join_now">Join now</string>
    <string name="bu_clicking">By clicking Join now, you agree to English district\'s </string>
    <string name="user_agreement">User Agreement,</string>
    <string name="privasy"> Privacy Policy</string>
    <string name="and">, and </string>
    <string name="cookie_policy"> Cookie Policy</string>
    <string name="alredy">Alredy have an account?</string>
</resources>
