<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/bg_join_now">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_white_1000"
        android:padding="0dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="First Name"
            android:padding="15dp"
            android:gravity="center_vertical"
            android:background="@drawable/bg_edit_text_form_reg"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:padding="15dp"
            android:hint="Second Name"
            android:background="@drawable/bg_edit_text_form_reg"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText3"
            android:padding="15dp"
            android:hint="Your Email"
            android:background="@drawable/bg_edit_text_form_reg"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText4"
            android:hint="Password"
            android:layout_margin="0dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:background="@drawable/bg_edit_text_form_reg"/>
    </LinearLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bu_clicking"
            android:id="@+id/textView3"
            android:gravity="left"
            android:textColor="#ccc"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:id="@+id/textView4"
            android:textColor="#fff"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="onShowUserAgreement"
            android:singleLine="false"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privasy"
            android:id="@+id/textView5"
            android:paddingLeft="5dp"
            android:layout_below="@+id/textView3"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4"
            android:textColor="#fff"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="onShowPrivacyPolicy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView3"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:textColor="#ccc"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cookie_policy"
            android:id="@+id/textView7"
            android:paddingLeft="5dp"
            android:layout_below="@+id/textView3"
            android:layout_toRightOf="@+id/textView6"
            android:layout_toEndOf="@+id/textView6"
            android:textColor="#fff"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="onShowCookiePolicy"
            />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_in"
        android:id="@+id/button"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:background="@color/com_shamanland_facebook_button_blue_normal_end"
        android:textColor="#fff"
        android:layout_marginBottom="10dp"
        android:onClick="onSignIn"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alredy"
            android:id="@+id/textView8"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:textColor="#ccc"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in"
            android:textColor="#ccc"
            android:paddingLeft="5dp"
            android:id="@+id/textView9"
            android:layout_below="@+id/button"
            android:layout_toRightOf="@+id/textView8"
            android:layout_toEndOf="@+id/textView8"
            android:onClick="onSignIn"/>
    </LinearLayout>
</RelativeLayout>